--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           <a href="/post/about" class="site-nav">
             关于
           </a>
-        
+         <a href="pdf路径">
+            XXpdf
+         </a>
       
     </div>
   </div>
