--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <a href="/post/about" class="site-nav">
             关于
           </a>
-         <a href="pdf路径">
-            XXpdf
+         <a href="/pdf/编程修养.pdf">
+            编程修养.pdf
          </a>
       
     </div>
