modify background-color to white

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 margin: 0;
             }
             html {
-                background-color: black;
+                background-color: rgb(255, 255, 255);
             }
             #top {
                 margin: auto;
@@ -63,7 +63,7 @@
     <body>
         <div id="top">
             <div id="logo">
-                <img src="logo/logo.jpeg" width="100px" height="70px">
+                <img src="logo/logo2.png" width="100px" height="70px">
             </div>
             <div id="navigation">
                 <a href="index.html">Home</a>
