--- a/src/contact.html
+++ b/src/contact.html
@@ -8,7 +8,7 @@
                 margin: 0;
             }
             html {
-                background-color: black;
+                background-color: rgb(255, 255, 255);
             }
             #top {
                 margin: auto;
@@ -45,7 +45,7 @@
     <body>
         <div id="top">
             <div id="logo">
-                    <img src="../logo/logo.jpeg" width="100px" height="70px">
+                    <img src="../logo/logo2.png" width="100px" height="70px">
             </div>
             <div id="navigation">
                 <a href="../index.html">Home</a>
@@ -64,14 +64,14 @@
             <br>
             <h4 style="color:rgb(12, 24, 197);">Contact us with github:</h4>
             <br>
-            <a href="https://github.com/miiboo" target="_blank" style="color:rgb(243, 241, 119);">https://github.com/miiboo</a>
+            <a href="https://github.com/miiboo" target="_blank" style="color:rgb(74, 181, 196);">https://github.com/miiboo</a>
             <br>
             <br>
             <br>
             <br>
             <h4 style="color:rgb(12, 24, 197);">Welcome to contact us via email:</h4>
             <br>
-            <h4 style="color:rgb(243, 241, 119);">robot4miiboo@163.com</h4>
+            <h4 style="color:rgb(74, 181, 196);">robot4miiboo@163.com</h4>
         </div>
     </body>
 </html>
