--- a/src/tutorial.html
+++ b/src/tutorial.html
@@ -8,7 +8,7 @@
                 margin: 0;
             }
             html {
-                background-color: black;
+                background-color: rgb(255, 255, 255);
             }
             #top {
                 margin: auto;
@@ -45,7 +45,7 @@
     <body>
         <div id="top">
             <div id="logo">
-                    <img src="../logo/logo.jpeg" width="100px" height="70px">
+                    <img src="../logo/logo2.png" width="100px" height="70px">
             </div>
             <div id="navigation">
                 <a href="../index.html">Home</a>
@@ -64,9 +64,9 @@
             <br>
             <h4 style="color:rgb(12, 24, 197);">Robotics-related tutorials:</h4>
             <br>
-            <a href="../pdf/miiboo_robot_introduction-V3_0.pdf" target="_blank" style="color:rgb(243, 241, 119);">miiboo_robot_introduction-V3_0.pdf</a>
+            <a href="../pdf/miiboo_robot_introduction-V3_0.pdf" target="_blank" style="color:rgb(74, 181, 196);">miiboo_robot_introduction-V3_0.pdf</a>
             <br>
-            <a href="../pdf/miiboo_robot_manual-V3_0.pdf" target="_blank" style="color:rgb(243, 241, 119);">miiboo_robot_manual-V3_0.pdf</a>
+            <a href="../pdf/miiboo_robot_manual-V3_0.pdf" target="_blank" style="color:rgb(74, 181, 196);">miiboo_robot_manual-V3_0.pdf</a>
         </div>
     </body>
 </html>
