--- a/src/video.html
+++ b/src/video.html
@@ -8,7 +8,7 @@
                 margin: 0;
             }
             html {
-                background-color: black;
+                background-color: rgb(255, 255, 255);
             }
             #top {
                 margin: auto;
@@ -45,7 +45,7 @@
     <body>
         <div id="top">
             <div id="logo">
-                    <img src="../logo/logo.jpeg" width="100px" height="70px">
+                    <img src="../logo/logo2.png" width="100px" height="70px">
             </div>
             <div id="navigation">
                 <a href="../index.html">Home</a>
@@ -64,7 +64,7 @@
             <br>
             <h4 style="color:rgb(12, 24, 197);">Video for Robot Development:</h4>
             <br>
-            <a href="https://youtu.be/avrZubxXrlU" target="_blank" style="color:rgb(243, 241, 119);">about miiboo robot in 60s</a>
+            <a href="https://youtu.be/avrZubxXrlU" target="_blank" style="color:rgb(74, 181, 196);">about miiboo robot in 60s</a>
         </div>
     </body>
 </html>
