--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
             }
             #bottom img {
                 width: 900px;
-                height: 600px;
-                margin: 0 auto;
+                height: 400px;
+				margin-top: 100;
+				margin-bottom: 100;
+				margin-left: auto;
+				margin-right: auto;
                 padding-top: 30px;
             }
             .img1 {
@@ -59,6 +62,16 @@
             }
             .img5 {
                 display: none;
+            }
+			#book {
+                text-align:center;
+                border-top: 2px solid cadetblue;
+                width: 1200px;
+                height: 600px;
+                margin-top: 1000;
+				margin-bottom: 1000;
+				margin-left: auto;
+				margin-right: auto;
             }
         </style>
     </head>>
@@ -81,11 +94,18 @@
             </div>
         </div>
         <div id="bottom">
-            <img class="img-slide img1" src="image/1.jpg" alt="1">
-            <img class="img-slide img2" src="image/2.jpg" alt="2">
-            <img class="img-slide img3" src="image/3.jpg" alt="3">
-            <img class="img-slide img4" src="image/4.jpg" alt="4">
-            <img class="img-slide img5" src="image/5.jpg" alt="5">
+        	<a href="http://www.xiihoo.com" target="_blank">
+            	<img class="img-slide img1" src="image/1.jpg" alt="1">
+            	<img class="img-slide img2" src="image/2.jpg" alt="2">
+            	<img class="img-slide img3" src="image/3.jpg" alt="3">
+            	<img class="img-slide img4" src="image/4.jpg" alt="4">
+            	<img class="img-slide img5" src="image/5.jpg" alt="5">
+            </a>
+        </div>
+        <div id="book">
+        	<a href="http://www.xiihoo.com" target="_blank">
+        		<img src="image/book_front.png">
+            </a>
         </div>
     </body>
 
