--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div id="book">
         	<a href="http://www.xiihoo.com" target="_blank">
-        		<img src="image/book_front.png">
+        		<img src="image/book_front.jpg">
             </a>
         </div>
     </body>
